# Orca

./: .gitignore  README.md
desktop/: package-lock.json  package.json
desktop/sources/scripts/: client.js  clock.js  commander.js
desktop/sources/scripts/core/: library.js
plugin/: CMakeLists.txt  Makefile
plugin/Source/: Commander.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/Source/engine/: CcStack.h  Engine.h  EngineIO.h  Grid.cpp  Grid.h  LifeGrid.h  MidiStack.h  MonoStack.h  Operator.cpp  Operator.h  Transpose.h  Types.h
